--- a/main/package.json
+++ b/main/package.json
@@ -21,6 +21,7 @@
     "@react-native-firebase/app": "^17.4.0",
     "@react-native-firebase/messaging": "^17.4.0",
     "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
     "@rneui/base": "^4.0.0-rc.7",
@@ -67,11 +68,12 @@
     "react-native-in-app-notification": "^3.2.0",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-level-fs": "^3.0.1",
-    "react-native-linear-gradient": "^2.6.2",
+    "react-native-linear-gradient": "^2.8.2",
+    "react-native-modal": "^13.0.1",
     "react-native-notifications": "^4.3.3",
     "react-native-os": "^1.2.6",
     "react-native-particle-auth": "^0.14.1",
-    "react-native-particle-biconomy": "0.14.2",
+    "react-native-particle-biconomy": "^0.14.2",
     "react-native-particle-connect": "^0.14.2",
     "react-native-qrcode": "^0.2.7",
     "react-native-qrcode-svg": "^6.2.0",
@@ -83,6 +85,7 @@
     "react-native-send-intent": "^1.3.0",
     "react-native-share": "^8.2.0",
     "react-native-slider": "^0.11.0",
+    "react-native-snackbar": "^2.6.2",
     "react-native-svg": "^13.9.0",
     "react-native-tcp": "^3.3.2",
     "react-native-text-gradient": "^0.1.7",
