--- a/main/package.json
+++ b/main/package.json
@@ -26,23 +26,24 @@
     "@react-navigation/native-stack": "^6.9.9",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
-    "@spritz-finance/api-client": "^0.1.1",
+    "@spritz-finance/api-client": "^0.2.1",
     "@spritz-finance/react-native-secure-elements": "^1.0.7",
     "@tradle/react-native-http": "^2.0.1",
     "@transak/react-native-sdk": "^1.3.0",
     "axios": "^1.4.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "big-integer": "^1.6.51",
     "bignumber.js": "^9.1.1",
     "bluebird": "^3.7.2",
     "browserify-zlib": "^0.1.4",
     "buffer": "^4.9.2",
     "dns.js": "^1.0.1",
     "dotenv-cli": "^7.0.0",
-    "ethers": "^5.0.0",
     "events": "^1.1.1",
     "https-browserify": "^0.0.1",
     "localstorage-polyfill": "^1.0.1",
-    "metro": "^0.75.0",
+    "metro": "0.76.0",
+    "micro": "^10.0.1",
     "node-libs-browser": "^2.2.1",
     "os": "^0.1.2",
     "patch-package": "^6.5.1",
@@ -86,7 +87,7 @@
     "react-native-share": "^8.2.0",
     "react-native-slider": "^0.11.0",
     "react-native-snackbar": "^2.6.2",
-    "react-native-svg": "^13.9.0",
+    "react-native-svg": "^13.12.0",
     "react-native-tcp": "^3.3.2",
     "react-native-text-gradient": "^0.1.7",
     "react-native-touch-id": "^4.4.1",
@@ -101,11 +102,11 @@
     "stream": "^0.0.2",
     "stream-browserify": "^1.0.0",
     "string_decoder": "^0.10.31",
+    "text-encoding": "^0.7.0",
     "timers-browserify": "^1.4.2",
     "url": "^0.10.3",
     "util": "^0.10.4",
-    "vm-browserify": "^0.0.4",
-    "web3": "^1.8.2"
+    "vm-browserify": "^0.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
