--- a/main/package.json
+++ b/main/package.json
@@ -31,6 +31,7 @@
     "@tradle/react-native-http": "^2.0.1",
     "@transak/react-native-sdk": "^1.3.0",
     "axios": "^1.4.0",
+    "babel-plugin-inline-import": "^3.0.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "big-integer": "^1.6.51",
     "bignumber.js": "^9.1.1",
@@ -83,11 +84,13 @@
     "react-native-rename": "^3.2.12",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
+    "react-native-select-dropdown": "^3.4.0",
     "react-native-send-intent": "^1.3.0",
     "react-native-share": "^8.2.0",
     "react-native-slider": "^0.11.0",
     "react-native-snackbar": "^2.6.2",
-    "react-native-svg": "^13.12.0",
+    "react-native-svg": "^13.13.0",
+    "react-native-svg-uri": "^1.2.3",
     "react-native-tcp": "^3.3.2",
     "react-native-text-gradient": "^0.1.7",
     "react-native-touch-id": "^4.4.1",
