--- a/main/package.json
+++ b/main/package.json
@@ -12,9 +12,12 @@
     "postinstall": "jetify && patch-package"
   },
   "dependencies": {
+    "@aave/contract-helpers": "^1.20.0",
+    "@aave/math-utils": "^1.20.0",
     "@biconomy/core-types": "2.0.0",
     "@biconomy/smart-account": "^2.0.0",
     "@ethersproject/shims": "^5.0.0",
+    "@particle-network/rn-auth-core": "^1.0.1",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-clipboard/clipboard": "^1.11.1",
     "@react-native-community/netinfo": "^9.3.8",
@@ -74,9 +77,9 @@
     "react-native-modal": "^13.0.1",
     "react-native-notifications": "^4.3.3",
     "react-native-os": "^1.2.6",
-    "react-native-particle-auth": "^0.14.1",
-    "react-native-particle-biconomy": "^0.14.2",
-    "react-native-particle-connect": "^0.14.2",
+    "react-native-particle-auth": "^1.0.4",
+    "react-native-particle-biconomy": "^1.0.4",
+    "react-native-particle-connect": "^1.0.4",
     "react-native-qrcode": "^0.2.7",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-randombytes": "^3.6.1",
