--- a/main/package.json
+++ b/main/package.json
@@ -14,8 +14,13 @@
   "dependencies": {
     "@aave/contract-helpers": "^1.20.0",
     "@aave/math-utils": "^1.20.0",
-    "@biconomy/core-types": "2.0.0",
-    "@biconomy/smart-account": "^2.0.0",
+    "@biconomy/account": "^3.1.0",
+    "@biconomy/bundler": "^3.1.0",
+    "@biconomy/common": "^3.1.0",
+    "@biconomy/core-types": "^3.1.0",
+    "@biconomy/modules": "^3.1.0",
+    "@biconomy/paymaster": "^3.1.0",
+    "@biconomy/smart-account": "^2.0.2",
     "@ethersproject/shims": "^5.0.0",
     "@particle-network/rn-auth-core": "^1.0.1",
     "@react-native-async-storage/async-storage": "^1.18.1",
@@ -83,7 +88,6 @@
     "react-native-qrcode": "^0.2.7",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-randombytes": "^3.6.1",
-    "react-native-reanimated": "^3.0.2",
     "react-native-rename": "^3.2.12",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
