--- a/main/package.json
+++ b/main/package.json
@@ -38,6 +38,7 @@
     "@spritz-finance/react-native-secure-elements": "^1.0.9",
     "@tradle/react-native-http": "^2.0.1",
     "@transak/react-native-sdk": "^1.3.0",
+    "alchemy-sdk": "^2.10.1",
     "axios": "^1.4.0",
     "babel-plugin-inline-import": "^3.0.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
@@ -64,6 +65,7 @@
     "react-native": "0.71.10",
     "react-native-camera-kit": "^13.0.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-collapsible-tab-view": "^6.2.1",
     "react-native-config": "^1.5.0",
     "react-native-countdown-component": "^2.7.1",
     "react-native-crypto": "^2.2.0",
@@ -82,12 +84,14 @@
     "react-native-modal": "^13.0.1",
     "react-native-notifications": "^4.3.3",
     "react-native-os": "^1.2.6",
+    "react-native-pager-view": "^6.2.1",
     "react-native-particle-auth": "^1.0.4",
     "react-native-particle-biconomy": "^1.0.4",
     "react-native-particle-connect": "^1.0.4",
     "react-native-qrcode": "^0.2.7",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-randombytes": "^3.6.1",
+    "react-native-reanimated": "^3.5.4",
     "react-native-rename": "^3.2.12",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
@@ -98,6 +102,7 @@
     "react-native-snackbar": "^2.6.2",
     "react-native-svg": "^13.13.0",
     "react-native-svg-uri": "^1.2.3",
+    "react-native-tab-view": "^3.5.2",
     "react-native-tcp": "^3.3.2",
     "react-native-text-gradient": "^0.1.7",
     "react-native-touch-id": "^4.4.1",
@@ -196,7 +201,6 @@
     "tls": false
   },
   "overrides": {
-    "react-native-gesture-handler": "^2.9.0",
-    "react-native-reanimated": "^3.0.2"
+    "react-native-gesture-handler": "^2.9.0"
   }
 }
